k8s/ingress/service.yaml
# apple-home Service
apiVersion: v1
kind: Service
metadata:
  name: apple-home-service
  labels:
    app: apple-home-service
    env: devops
spec:
  selector:
    app: apple-home  # Matches pods with this label
  ports:
    - name: http
      protocol: TCP
      port: 80        # Exposes service on port 80
      targetPort: 80  # Forwards traffic to container's port 80
---
# apple-mobile Service
apiVersion: v1
kind: Service
metadata:
  name: apple-mobile-service
  labels:
    app: apple-mobile-service
    env: devops
spec:
  selector:
    app: apple-mobile  # Matches pods with this label
  ports:
    - name: http
      protocol: TCP
      port: 80        # Exposes service on port 80
      targetPort: 80  # Forwards traffic to container's port 80
